--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    <p>First<a href="./HTML,CSS,JS/First.html">Link1</a></p>
+    <p>First<a href="./HTML,CSS,JS/heading frist.html">Link1</a></p>
+    <p>Formatting tag <a href="./HTML,CSS,JS/classes/formatting tags.html">Link2</a></p
+    <p>Self closing <a href="./HTML,CSS,JS/classes/self closing.html">Link3</a></p>
+    <p>WWW project <a href="./HTML,CSS,JS/classes/www frist project.html">Link4</a></p>
+    <p>lists <a href="./HTML,CSS,JS/classes/list.html">Link5</a></p>
+    <p>my resume <a href="./HTML,CSS,JS/classes/my resume.html">Link6</a></p>
+
 </body>
 </html>
