--- a/Index.html
+++ b/Index.html
@@ -12,6 +12,7 @@
     <p>WWW project <a href="./HTML,CSS,JS/classes/www frist project.html">Link4</a></p>
     <p>lists <a href="./HTML,CSS,JS/classes/list.html">Link5</a></p>
     <p>my resume <a href="./HTML,CSS,JS/classes/my resume.html">Link6</a></p>
+    <p>Basic Css<a href="./CSS/first_css/index.html">Link6</a></p>
 
 </body>
 </html>
