--- a/HTML,CSS,JS/INDEX/Index.html
+++ b/HTML,CSS,JS/INDEX/Index.html
@@ -13,6 +13,7 @@
     <p>lists <a href="./HTML,CSS,JS/classes/list.html">Link5</a></p>
     <p>my resume <a href="./HTML,CSS,JS/classes/my resume.html">Link6</a></p>
     <p>Basic Css<a href="./CSS/first_css/index.html">Link6</a></p>
+    <p>pic ,<a href="./CSS/first_css/swathibolagani picture.html"></p>
 
 </body>
 </html>
